// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorWindow should show panel in iframe mode 1`] = `"<div class=\\"container\\" style=\\"width: 100px;\\"><iframe class=\\"iframe\\" style=\\"width: 100px;\\" src=\\"some url\\"></iframe></div>"`;

exports[`EditorWindow should show panel in iframe mode 2`] = `
Object {
  "onOpen": [MockFunction] {
    "calls": Array [
      Array [
        Promise {},
      ],
    ],
  },
}
`;

exports[`EditorWindow should show panel in window mode 1`] = `null`;

exports[`EditorWindow should show panel in window mode 2`] = `
Object {
  "onOpen": [MockFunction] {
    "calls": Array [
      Array [
        Promise {},
      ],
    ],
  },
  "window": Object {
    "open": [MockFunction] {
      "calls": Array [
        Array [
          "some-url",
          "locize-editor",
          "",
          true,
        ],
      ],
    },
  },
}
`;

exports[`EditorWindow should show panel in window mode 3`] = `
Object {
  "open": [MockFunction] {
    "calls": Array [
      Array [
        "some-url",
        "locize-editor",
        "",
        true,
      ],
    ],
  },
}
`;

exports[`EditorWindow should show panel in window mode 4`] = `
Object {
  "focus": [MockFunction] {
    "calls": Array [
      Array [],
    ],
  },
  "postMessage": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "someMessageData": "data",
        },
        "target",
        undefined,
      ],
    ],
  },
}
`;
